fix: visible tracker utils cleaned

--- a/frontend/src/css/StudySet.css
+++ b/frontend/src/css/StudySet.css
@@ -103,6 +103,14 @@
 }
   
   @media (max-width: 768px) {
+    .study-set{
+        margin:0;
+        width: 100%;
+        height: calc(100vh - 70px);
+        top: 0;
+        justify-content: center;
+        align-items: center;
+    }
 
     .hamburger-icon {
         display: flex;
@@ -155,7 +163,7 @@
   
     .floating-leaderboard-toggle {
         position: fixed;
-        bottom: 2rem;
+        bottom: 100px;
         right: 2rem;
         z-index: 1000;
     }
